# OpenELoad

./: README.md
code/.metadata/: .log4j2.xml  version.ini
code/.metadata/.plugins/org.eclipse.cdt.core/: eload.language.settings.xml
code/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
code/.metadata/.plugins/org.eclipse.core.resources/.projects/eload/: .location  .markers
code/.metadata/.plugins/org.eclipse.core.resources/.projects/eload/.indexes/: properties.index
code/.metadata/.plugins/org.eclipse.core.resources/.projects/eload/.indexes/91/1/: history.index
code/.metadata/.plugins/org.eclipse.core.resources/.projects/eload/.indexes/bf/be/: history.index
code/.metadata/.plugins/org.eclipse.core.resources/.projects/eload/.indexes/bf/c4/: history.index
code/.metadata/.plugins/org.eclipse.core.resources/.root/: 15.tree  29.tree
code/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
code/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
code/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
code/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
code/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2024/7/29/: refactorings.history  refactorings.index
code/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2024/7/30/: refactorings.history  refactorings.index
code/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2025/2/7/: refactorings.history  refactorings.index
code/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/eload/2024/11/46/: refactorings.history  refactorings.index
code/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
code/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
code/eload/: .cproject  .mxproject  .project  STM32F401VDTX_FLASH.ld  STM32F401VDTX_RAM.ld  eload Debug Remote.cfg  eload Debug Remote.launch  eload Debug.launch  eload.ioc
code/eload/Core/Inc/: FIRFilter.h  hw_interface.h  main.h  mcp330x.h  menu.hpp  menu2.h  pid.h  pidAutotune.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usbCom.h
code/eload/Core/Src/: FIRFilter.cpp  flashMem.cpp  hw_interface.cpp  mcp330x.cpp  menu.cpp  menu2.cpp  pid.cpp  pidAutotune.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbCom.cpp
code/eload/Debug/: eload.elf  makefile  objects.list
code/eload/Debug/Core/Src/: FIRFilter.cyclo  FIRFilter.d  FIRFilter.su  flashMem.cyclo  flashMem.d  flashMem.su  hw_interface.cyclo  hw_interface.d  hw_interface.su  liquidcrystal_i2c.d  main.cyclo  main.d  main.su  mcp330x.cyclo  mcp330x.d  mcp330x.su  menu.d  menu2.cyclo  menu2.d  menu2.su  pid.cyclo  pid.d  pid.su  pidAutotune.d  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk  usbCom.cyclo  usbCom.d  usbCom.su
code/eload/Debug/Core/Startup/: subdir.mk
code/eload/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
code/eload/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk
code/eload/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su
code/eload/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
desktopApp/cpp_libs/: CMakeLists.txt
desktopApp/cpp_libs/inc/: serial.hpp  usbCom.hpp  vcp_api.hpp
desktopApp/cpp_libs/main/: main.cpp
desktopApp/cpp_libs/src/: serial.cpp  usbCom.cpp  vcp_api.cpp
desktopApp/nanaGui/: CMakeLists.txt
desktopApp/nanaGui/inc/: mainWindow.hpp  widgetBuilder.hpp
desktopApp/nanaGui/main/: main.cpp
desktopApp/nanaGui/src/: mainWindow.cpp  widgetBuilder.cpp
desktopApp/nanaGui/temp/nana/v142_Debug_x64/nana.tlog/: CL.10888.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  nana.lastbuildstate
(+6 files in other folders)
